added explore tab

--- a/index.html
+++ b/index.html
@@ -48,18 +48,72 @@
             <div class="col s12 m6 l3">
                 <div class="card">
                     <div class="card-image waves-effect waves-block waves-light">
-                    <img class="activator" src="images/office.jpg">
+                    <img class="activator" src="pylon.jpg">
                     </div>
                     <div class="card-content">
-                    <span class="card-title activator grey-text text-darken-4">Card Title<i class="material-icons right">more_vert</i></span>
-                    <p><a href="#">This is a link</a></p>
+                    <span class="card-title activator grey-text text-darken-4">Pylon<i class="material-icons right">more_vert</i></span>
+                    <p><a href="#">Explore!</a></p>
                     </div>
                     <div class="card-reveal">
-                    <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
-                    <p>Here is some more information about this product that is only revealed once clicked on.</p>
+                    <span class="card-title grey-text text-darken-4">PUP Pylon<i class="material-icons right">close</i></span>
+                    <p>
+                        The Pylon. The Pylon originally stood for the true, the good and the beautiful. The Triad of pillars may also stand for wisdom, strength and beauty because there should be wisdom to contrive, strength to support and beauty to adorn any great or important undertaking.
+                    </p>
                     </div>
                 </div>
                 </div>
+
+                <div class="col s12 m6 l3">
+                    <div class="card">
+                        <div class="card-image waves-effect waves-block waves-light">
+                        <img class="activator" src="lagoon.jpg">
+                        </div>
+                        <div class="card-content">
+                        <span class="card-title activator grey-text text-darken-4">Lagoon<i class="material-icons right">more_vert</i></span>
+                        <p><a href="#">Explore!</a></p>
+                        </div>
+                        <div class="card-reveal">
+                        <span class="card-title grey-text text-darken-4">Lagoon<i class="material-icons right">close</i></span>
+                        <p>
+                            The PUP (Polytechnic University of the Philippines) Lagoon, for some, was just an ordinary mossy creek with trees around and birds chirping for drama; but this is something special for every PUPian. This was probably the most hung-out place compared to the rest of the spot in PUP. This was like a waiting area for students while waiting for their next class. A picnic area during breaks. A place for students to brainstorm for group projects. A relaxing area where you can catch some sleep. Lastly, where lovers stay upon the strike of darkness! The lagoon is indeed a defining landmark of the campus.
+                        </p>
+                        </div>
+                    </div>
+                    </div>
+
+                    <div class="col s12 m6 l3">
+                        <div class="card">
+                            <div class="card-image waves-effect waves-block waves-light">
+                            <img class="activator" src="mabini shrine.jpg">
+                            </div>
+                            <div class="card-content">
+                            <span class="card-title activator grey-text text-darken-4">Mabini Shrine<i class="material-icons right">more_vert</i></span>
+                            <p><a href="#">Explore!</a></p>
+                            </div>
+                            <div class="card-reveal">
+                            <span class="card-title grey-text text-darken-4">Mabini Shrine<i class="material-icons right">close</i></span>
+                            <p>
+                                The Mabini Shrine bamboo and nipa house, currently located within the campus of the Polytechnic University of the Philippines (PUP), belonged to the del Rosario family to whom Filipino hero Apolinario Mabini was related by affinity. (His younger brother married a del Rosario daughter.) Mabini first lived in this house in 1888, the year he entered law school. He continued to live there during most of his adult years. The original house used to be located across the Pasig River. It was moved to PUP in Sta. Mesa, Manila, in 2009 to give way to the widening of the Pasig River. Important artifacts on display are Mabini’s original photograph, a wooden wreath bequeathed by a friend from Paete, Laguna, a long wooden bench used by the Mabini family
+                            </div>
+                        </div>
+                        </div>
+
+                        <div class="col s12 m6 l3">
+                            <div class="card">
+                                <div class="card-image waves-effect waves-block waves-light">
+                                <img class="activator" src="fort.jpg">
+                                </div>
+                                <div class="card-content">
+                                <span class="card-title activator grey-text text-darken-4">Fort Santiago<i class="material-icons right">more_vert</i></span>
+                                <p><a href="#">Explore!</a></p>
+                                </div>
+                                <div class="card-reveal">
+                                <span class="card-title grey-text text-darken-4">Fort Santiago<i class="material-icons right">close</i></span>
+                                <p>
+                                    PUP's version of the Fort Santiago Gate, which leads to a walled enclave--a park w/ a small "lagoon" & some food kiosks. Sta. Mesa, Manila.
+                                </div>
+                            </div>
+                            </div>
             </div>
         
 
