--- a/index.html
+++ b/index.html
@@ -26,21 +26,27 @@
           </nav>
         
     <div class="content">
-    <!-- Navigation Button-->
+
+        
+      <!-- Navigation Button-->
     <div class="fixed-action-btn">
 
         <a class="btn-floating btn-large red">
-          <i class="large material-icons">mode_edit</i>
+          <i class="large material-icons">menu</i>
         </a>
         <ul>
-          <li><a class="btn-floating red"><i class="material-icons">insert_chart</i></a></li>
-          <li><a class="btn-floating yellow darken-1"><i class="material-icons">format_quote</i></a></li>
-          <li><a class="btn-floating green"><i class="material-icons">publish</i></a></li>
-          <li><a class="btn-floating blue"><i class="material-icons">attach_file</i></a></li>
+          <li><a class="btn-floating red"><i class="material-icons">live_tv</i></a></li> <!--VR Experience-->
+          <li><a class="btn-floating yellow darken-1"><i class="material-icons">book</i></a></li> <!--Written History-->
+          <li><a class="btn-floating green"><i class="material-icons">restaurant</i></a></li> <!-- Food -->
+          <li><a class="btn-floating blue"><i class="material-icons">insert_invitation</i></a></li> <!-- Events-->
         </ul>
     </div>
 
     <br>
+    <div class="hero">
+        <img class="pup" src="PUP.jpg">   
+    </div>
+
     <div class="explore">
         <h5>Explore</h5>          
 
@@ -125,10 +131,9 @@
         <h1>Welcome to PUP SintApp! </h1>
     </div>  
 
-    <div class="hero">
-        <img class="pup" src="PUP.png">   
-    </div>
-
+    <center>
+        <h5> Copyright Johan J. Villanueva 2023</h5>
+    </center>
     <!--JavaScript at end of body for optimized loading-->
     <script type="text/javascript" src="functions.js"></script>
     <script type="text/javascript" src="materialize/js/materialize.min.js"></script>
