--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link type="text/css" rel="stylesheet" href="styles.css">
     <link type="text/css" rel="stylesheet" href="materialize/css/materialize.min.css"  media="screen,projection"/>
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
 
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -18,9 +19,8 @@
             <div class="nav-wrapper pink darken-4">
             <center>
               <img src="PUPlogo.png" style="width: 55px; padding-left: 10px;padding-top:8px;">
-        
+            </center>         
               <ul id="nav-mobile" class="right hide-on-med-and-down">
-            </center>  
             </ul>
             </div>
           </nav>
@@ -39,6 +39,7 @@
           <li><a class="btn-floating yellow darken-1"><i class="material-icons">book</i></a></li> <!--Written History-->
           <li><a class="btn-floating green"><i class="material-icons">restaurant</i></a></li> <!-- Food -->
           <li><a class="btn-floating blue"><i class="material-icons">insert_invitation</i></a></li> <!-- Events-->
+          <li><a class="btn-floating purple darken-4"><i class="material-icons">warning</i></a></li> <!-- Events-->
         </ul>
     </div>
 
@@ -127,8 +128,10 @@
 
 
     </div>
+
     <div class="main-content">
-        <h1>Welcome to PUP SintApp! </h1>
+        <h5> PUP Map | Click to Download</h5><br>  
+        <a href="PUPMap.gif" download><img src="PUPMap.gif" style="border-radius: 20px; width: 100%;"></a>
     </div>  
 
     <center>
