--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   </head>
 
 <body>
+
         <nav>
             <div class="nav-wrapper pink darken-4">
             <center>
@@ -39,17 +40,23 @@
           <li><a class="btn-floating yellow darken-1"><i class="material-icons">book</i></a></li> <!--Written History-->
           <li><a class="btn-floating green"><i class="material-icons">restaurant</i></a></li> <!-- Food -->
           <li><a class="btn-floating blue"><i class="material-icons">insert_invitation</i></a></li> <!-- Events-->
-          <li><a class="btn-floating purple darken-4"><i class="material-icons">warning</i></a></li> <!-- Events-->
+          <li><a href="map.html" class="btn-floating purple darken-4"><i class="material-icons">warning</i></a></li> <!-- Events-->
         </ul>
     </div>
 
     <br>
     <div class="hero">
+
+
+
         <img class="pup" src="PUP.jpg">   
+        <div class="pupian">
+          <img src="pupiancut.png" style="width: 800px;">
+        </div>
     </div>
 
     <div class="explore">
-        <h5>Explore</h5>          
+        <h5>Explore!</h5>          
 
         <div class="row">
             <div class="col s12 m6 l3">
@@ -122,25 +129,26 @@
                             </div>
                             </div>
             </div>
-        
-
-
-
-
     </div>
 
-    <div class="main-content">
-        <h5> PUP Map | Click to Download</h5><br>  
-        <a href="PUPMap.gif" download><img src="PUPMap.gif" style="border-radius: 20px; width: 100%;"></a>
-    </div>  
+    <div class="hymn">
+      <iframe src="hymn/index2.html" style="width: 100%; height: 400px;border-radius: 5px;"></iframe>
+    </div>
 
-    <center>
-        <h5> Copyright Johan J. Villanueva 2023</h5>
-    </center>
+
+    <div class="twitter">
+      <h5 style="color: white;">News!</h5>
+      <blockquote class="twitter-tweet"><p lang="en" dir="ltr">CAEPUP RESULTS ARE HERE! <a href="https://twitter.com/hashtag/CAEPUP2023?src=hash&amp;ref_src=twsrc%5Etfw">#CAEPUP2023</a> <a href="https://twitter.com/hashtag/PUPCUTIE?src=hash&amp;ref_src=twsrc%5Etfw">#PUPCUTIE</a> <a href="https://t.co/Fr0lfGwuWF">pic.twitter.com/Fr0lfGwuWF</a></p>&mdash; PUP (Official) (@ThePUPOfficial) <a href="https://twitter.com/ThePUPOfficial/status/1662851231910600705?ref_src=twsrc%5Etfw">May 28, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+    </div>
+
+
+
+
+
     <!--JavaScript at end of body for optimized loading-->
     <script type="text/javascript" src="functions.js"></script>
     <script type="text/javascript" src="materialize/js/materialize.min.js"></script>
-</div>
+
   </body>
 </html>
       
