--- a/index.html
+++ b/index.html
@@ -46,7 +46,12 @@
 
     <br>
     <div class="hero">
-
+        <div class="scanme">
+          <center>
+          <h4 style="color: white;"> Scan Me!</h4>>
+          <img src="open.png" style="width: 60%;margin-left: -20px;">
+        </center>
+        </div>
 
 
         <img class="pup" src="PUP.jpg">   
