--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link type="text/css" rel="stylesheet" href="materialize/css/materialize.min.css"  media="screen,projection"/>
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
-
+    <link href="https://fonts.cdnfonts.com/css/dm-sans" rel="stylesheet">
+    <link href="https://fonts.cdnfonts.com/css/heavitas" rel="stylesheet">    
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>SintAPP | Your Interactive PUP App</title>
@@ -136,10 +137,15 @@
             </div>
     </div>
 
+
     <div class="hymn">
       <iframe src="hymn/index2.html" style="width: 100%; height: 400px;border-radius: 5px;"></iframe>
     </div>
 
+
+  <div class="events" style="margin-top: 10px;">
+    
+  </div>
 
     <div class="twitter">
       <h5 style="color: white;">News!</h5>
