--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 
 
     <div class="hymn">
-      <iframe src="hymn/index2.html" style="width: 100%; height: 400px;border-radius: 5px;"></iframe>
+      <iframe src="puphymn/hymn.html" style="width: 100%; height: 400px;border-radius: 5px;"></iframe>
     </div>
 
 
