--- a/index.html
+++ b/index.html
@@ -137,20 +137,97 @@
             </div>
     </div>
 
-
     <div class="hymn">
       <iframe src="puphymn/hymn.html" style="width: 100%; height: 400px;border-radius: 5px;"></iframe>
     </div>
-
-
-  <div class="events" style="margin-top: 10px;">
-    
-  </div>
 
     <div class="twitter">
       <h5 style="color: white;">News!</h5>
       <blockquote class="twitter-tweet"><p lang="en" dir="ltr">CAEPUP RESULTS ARE HERE! <a href="https://twitter.com/hashtag/CAEPUP2023?src=hash&amp;ref_src=twsrc%5Etfw">#CAEPUP2023</a> <a href="https://twitter.com/hashtag/PUPCUTIE?src=hash&amp;ref_src=twsrc%5Etfw">#PUPCUTIE</a> <a href="https://t.co/Fr0lfGwuWF">pic.twitter.com/Fr0lfGwuWF</a></p>&mdash; PUP (Official) (@ThePUPOfficial) <a href="https://twitter.com/ThePUPOfficial/status/1662851231910600705?ref_src=twsrc%5Etfw">May 28, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     </div>
+
+
+    <div class="events" style="margin-top: 10px;">
+      <h5>Events!</h5>          
+
+      <div class="row">
+          <div class="col s12 m6 l3">
+              <div class="card">
+                  <div class="card-image waves-effect waves-block waves-light">
+                  <img class="activator" src="events/1.jpg">
+                  </div>
+                  <div class="card-content">
+                  <span class="card-title activator grey-text text-darken-4">ARCDO holds f2f job fair<i class="material-icons right">more_vert</i></span>
+                  <p><a href="#">Read!</a></p>
+                  </div>
+                  <div class="card-reveal">
+                  <span class="card-title grey-text text-darken-4">ARCDO holds f2f job fair<i class="material-icons right">close</i></span>
+                  <p>
+                    The Polytechnic University of the Philippines (PUP), through the Alumni Relations and Career Development Office (ARCDO), recently held its first face-to-face job fair titled, “2023 Career Fest” after a two-year hiatus. The event took place in the PUP Gymnasium from February 20-22, 2023, attracting over a thousand students and featuring 41 industry partners.
+                  </p>
+                  </div>
+              </div>
+              </div>
+
+              <div class="col s12 m6 l3">
+                  <div class="card">
+                      <div class="card-image waves-effect waves-block waves-light">
+                      <img class="activator" src="events/2.jpg">
+                      </div>
+                      <div class="card-content">
+                      <span class="card-title activator grey-text text-darken-4">Virtual career fair empower students to forge opportunities amid pandemic<i class="material-icons right">more_vert</i></span>
+                      <p><a href="#">Read!</a></p>
+                      </div>
+                      <div class="card-reveal">
+                      <span class="card-title grey-text text-darken-4">Virtual career fair empower students to forge opportunities amid pandemic<i class="material-icons right">close</i></span>
+                      <p>
+                        The Polytechnic University of the Philippines (PUP) recently organized a successful Virtual Career and Internship Fair, providing students with valuable networking and internship prospects amidst the ongoing pandemic. Held on May 5, 2023, the event took place via Zoom and was livestreamed via the PUP Career Center Facebook Page.
+                       </p>
+                      </div>
+                  </div>
+                  </div>
+
+                  <div class="col s12 m6 l3">
+                      <div class="card">
+                          <div class="card-image waves-effect waves-block waves-light">
+                          <img class="activator" src="mabini shrine.jpg">
+                          </div>
+                          <div class="card-content">
+                          <span class="card-title activator grey-text text-darken-4">Ginto: Student-athletes win big in 32nd SEA Games<i class="material-icons right">more_vert</i></span>
+                          <p><a href="#">Read!</a></p>
+                          </div>
+                          <div class="card-reveal">
+                          <span class="card-title grey-text text-darken-4">Ginto: Student-athletes win big in 32nd SEA Games<i class="material-icons right">close</i></span>
+                          <p>
+                            Two Bachelor of Science in Exercises and Sports students secured medals for the Philippines during the 32nd Southeast Asian Games in Cambodia. Ahgie Radan took home the gold medal in the Obstacle Race Men’s Team Relay, while Rhichein Yozores won silver and bronze medals in various categories for Kun Bokator.
+                            </p>
+                          </div>
+                      </div>
+                      </div>
+
+                      <div class="col s12 m6 l3">
+                          <div class="card">
+                              <div class="card-image waves-effect waves-block waves-light">
+                              <img class="activator" src="events/4.jpg">
+                              </div>
+                              <div class="card-content">
+                              <span class="card-title activator grey-text text-darken-4">Engineering grads dominate licensure examinations<i class="material-icons right">more_vert</i></span>
+                              <p><a href="#">Read!</a></p>
+                              </div>
+                              <div class="card-reveal">
+                              <span class="card-title grey-text text-darken-4">Engineering grads dominate licensure examinations<i class="material-icons right">close</i></span>
+                              <p>
+                                PUP remains on top of the engineering field as ten (10) graduates topped three different licensure examinations held last month. PUP Sto. Tomas took the top spot among different schools and universities for the Electrical Engineering Licensure Examinations, while PUP Sta. Mesa secured the fourth place.
+                                </p>
+                              </div>
+                          </div>
+                          </div>
+          </div>
+  </div>
+
+
+
+
 
 
 
