--- a/map.html
+++ b/map.html
@@ -41,7 +41,7 @@
           <li><a href="index.html" class="btn-floating red"><i class="material-icons">home</i></a></li> <!--VR Experience-->
           <li><a class="btn-floating yellow darken-1"><i class="material-icons">book</i></a></li> <!--Written History-->
           <li><a class="btn-floating green"><i class="material-icons">restaurant</i></a></li> <!-- Food -->
-          <li><a class="btn-floating blue"><i class="material-icons">insert_invitation</i></a></li> <!-- Events-->
+          <li><a href="calendar.html" class="btn-floating blue"><i class="material-icons">insert_invitation</i></a></li> <!-- Events-->
           <li><a href="map.html" class="btn-floating purple darken-4"><i class="material-icons">navigation</i></a></li> <!-- Events-->
         </ul>
     </div>
@@ -77,11 +77,12 @@
 
         </map>      
 
+
           <div id="gym">
-                <h1 class="name" style="font-size: 20px;">
+                <h1 class="name" >
                     PUP Gymnasium and Sport Center 
                 </h1>
-                <h3 class="description" style="font-size: 15px;">
+                <h3 class="description" >
                     The PUP Gymnasium and Sport Center is a large, multi-purpose facility that is used for a variety of activities, including sports, concerts, and conventions.
 
                 </h3>
@@ -176,7 +177,7 @@
             </h1>
             <h3 class="description">
                 The Nutrition and Science Building (CNFS) is a four-storey building located in the heart of the PUP campus. It houses the College of Nutrition and Food Science, which offers undergraduate and graduate programs in nutrition and food science. The building also has a number of laboratories, classrooms, and offices.
-<br>
+        <br>
         <img src="photos/nut.jpg" style="width: 60%;border-radius: 20px;"class="image">
         </div>
 
