--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <li><a class="btn-floating yellow darken-1"><i class="material-icons">book</i></a></li> <!--Written History-->
           <li><a class="btn-floating green"><i class="material-icons">restaurant</i></a></li> <!-- Food -->
           <li><a href="calendar.html" class="btn-floating blue"><i class="material-icons">insert_invitation</i></a></li> <!-- Events-->
-          <li><a href="map.html" class="btn-floating purple darken-4"><i class="material-icons">navigation</i></a></li> <!-- VR -->
+          <li><a href="selector.html" class="btn-floating purple darken-4"><i class="material-icons">navigation</i></a></li> <!-- VR -->
         </ul>
     </div>
 
@@ -72,7 +72,7 @@
                     </div>
                     <div class="card-content">
                     <span class="card-title activator grey-text text-darken-4">Pylon<i class="material-icons right">more_vert</i></span>
-                    <p><a href="#">Explore!</a></p>
+                    <p><a href="selector.html">Explore!</a></p>
                     </div>
                     <div class="card-reveal">
                     <span class="card-title grey-text text-darken-4">PUP Pylon<i class="material-icons right">close</i></span>
@@ -90,7 +90,7 @@
                         </div>
                         <div class="card-content">
                         <span class="card-title activator grey-text text-darken-4">Lagoon<i class="material-icons right">more_vert</i></span>
-                        <p><a href="#">Explore!</a></p>
+                        <p><a href="pano2.html">Explore!</a></p>
                         </div>
                         <div class="card-reveal">
                         <span class="card-title grey-text text-darken-4">Lagoon<i class="material-icons right">close</i></span>
@@ -108,7 +108,7 @@
                             </div>
                             <div class="card-content">
                             <span class="card-title activator grey-text text-darken-4">Mabini Shrine<i class="material-icons right">more_vert</i></span>
-                            <p><a href="#">Explore!</a></p>
+                            <p><a href="pano5.html">Explore!</a></p>
                             </div>
                             <div class="card-reveal">
                             <span class="card-title grey-text text-darken-4">Mabini Shrine<i class="material-icons right">close</i></span>
@@ -125,7 +125,7 @@
                                 </div>
                                 <div class="card-content">
                                 <span class="card-title activator grey-text text-darken-4">Fort Santiago<i class="material-icons right">more_vert</i></span>
-                                <p><a href="#">Explore!</a></p>
+                                <p><a href="selector.html">Explore!</a></p>
                                 </div>
                                 <div class="card-reveal">
                                 <span class="card-title grey-text text-darken-4">Fort Santiago<i class="material-icons right">close</i></span>
