--- a/pano5.html
+++ b/pano5.html
@@ -38,7 +38,7 @@
         </a>
         <ul>
           <li><a href="index.html" class="btn-floating red"><i class="material-icons">home</i></a></li> <!-- Map -->
-          <li><a class="btn-floating yellow darken-1"><i class="material-icons">book</i></a></li> <!--Written History-->
+          <li><a href="kiosk.html" class="btn-floating yellow darken-1"><i class="material-icons">book</i></a></li> <!--Written History-->
           <li><a class="btn-floating green"><i class="material-icons">restaurant</i></a></li> <!-- Food -->
           <li><a href="calendar.html" class="btn-floating blue"><i class="material-icons">insert_invitation</i></a></li> <!-- Events-->
           <li><a href="selector.html" class="btn-floating purple darken-4"><i class="material-icons">navigation</i></a></li> <!-- VR -->
@@ -53,7 +53,7 @@
 
 </div>
 
-<div class="explore" style="width: 50%;margin: 10px;">
+<div class="explore1">
 <h5> Apolinario Mabini Shrine</h5>
 <img src="photos/mabini.png" style="width: 100%;"> 
 <h6>
@@ -62,7 +62,7 @@
 </div>
 
 
-<div class="explore" style="width: 45%;margin: 10px;">
+<div class="explore2">
     <h5>More 360 Photos</h5>
     <div class="row">
         <div class="col s4">
