fixed formating, need to add foood and news section

--- a/index.html
+++ b/index.html
@@ -1,4 +1,15 @@
 <!DOCTYPE html>
+<!--ADD FOOD AND NEWS SECTION-->
+<!--ADD FOOD AND NEWS SECTION-->
+<!--ADD FOOD AND NEWS SECTION-->
+<!--ADD FOOD AND NEWS SECTION-->
+<!--ADD FOOD AND NEWS SECTION-->
+<!--ADD FOOD AND NEWS SECTION-->
+
+<!--Villanueva Johan J-->
+<!--Agarin Kenneth L.-->
+<!--Angelica P. Sevilla-->
+<!--Melody Meria-->
 <html>
   <head>
     <!--Import Google Icon Font-->
