--- a/calendar.html
+++ b/calendar.html
@@ -50,10 +50,10 @@
     <div class="hero" style="height: 200px; margin-top: -25px;">
         <img class="pup" src="PUP.jpg" style="margin-top: -100px;">   
     </div>
-
-    <div class="calendar">
+<center>
+    <div class="calendar1">
         <center>
-    <h4> June </h4>
+    <h4> July </h4>
 </center>
         <table>
             <tr>
@@ -70,47 +70,56 @@
               <td></td>
               <td></td>
               <td></td>
+              <td></td>
+              <td></td>
               <td>1</td>
+            </tr>
+            <tr>
               <td>2</td>
-              <td>3</td>
-            </tr>
-            <tr>
+              <td class="event">3<br>	Final and Departmental Examinations of Graduating Students</td>
               <td>4</td>
-              <td>5</td>
-              <td>6</td>
-              <td>7</td>
-              <td>8</td>
-              <td>9</td>
-              <td>10</td>
+              <td class="event">5<br>Online encoding of Final Grades of Graduating Students for the Second Semester, A.Y. 2022-2023</td>
+              <td >6</td>
+              <td >7</td>
+              <td >8</td>
             </tr>
             <tr>
-              <td>11</td>
-              <td class="event">12<br>Philippine Independence Day</td>
-              <td>13</td>
-              <td>14</td>
-              <td class="event">15<br>College Freshman, Main Campus (Sta. Mesa, Manila)</td>
-              <td class="event">16</td>
-              <td class="event">17<br></td>
+              <td >9</td>
+              <td >10</td>
+              <td class="event">11<br>Last day for Graduating Students to clear their Academic and Non-Academic Deficiencies</td>
+              <td>12</td>
+              <td class="event">13<br> Finalization of grades of Graduating Students for the Second Semester, A.Y. 2022-2023</td>
+              <td >14</td>
+              <td >15</td>
             </tr>
             <tr>
-              <td class="event">18</td>
-              <td class="event">19<br></td>
+              <td>17</td>
+              <td>18</td>
+              <td class="event">19<br>Online encoding of Final Grades of Non-Graduating Students for the Second Semester, A.Y. 2022-2023</td>
               <td>20</td>
               <td>21</td>
               <td>22</td>
               <td>23</td>
-              <td class="event">24<br>Manila Day</td>
             </tr>
             <tr>
+
+                <td class="event">24<br>Final Examinations of Non-Graduating Students</td>
                 <td>25</td>
                 <td>26</td>
                 <td>27</td>
                 <td>28</td>
                 <td>29</td>
-                <td>30</td>
-              </tr>          
-    </div>
+                <td class="event">30<br>Second Semester ends</td>
+              </tr>  
+              <tr>
 
+                <td class="event">31<br>Long Vacation begins</td>
+                <td></td>
+                <td></td>
+              </tr>           
+    </div>
+    
+  </center>
     <!--JavaScript at end of body for optimized loading-->
     <script type="text/javascript" src="functions.js"></script>
     <script type="text/javascript" src="materialize/js/materialize.min.js"></script>
