--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                   </div>
                   <div class="card-content">
                   <span class="card-title activator grey-text text-darken-4">ARCDO holds f2f job fair<i class="material-icons right">more_vert</i></span>
-                  <p><a href="#">Read!</a></p>
+                  <p><a href="news1.html">Read!</a></p>
                   </div>
                   <div class="card-reveal">
                   <span class="card-title grey-text text-darken-4">ARCDO holds f2f job fair<i class="material-icons right">close</i></span>
@@ -187,7 +187,7 @@
                       </div>
                       <div class="card-content">
                       <span class="card-title activator grey-text text-darken-4">Virtual career fair empower students to forge opportunities amid pandemic<i class="material-icons right">more_vert</i></span>
-                      <p><a href="#">Read!</a></p>
+                      <p><a href="news2.html">Read!</a></p>
                       </div>
                       <div class="card-reveal">
                       <span class="card-title grey-text text-darken-4">Virtual career fair empower students to forge opportunities amid pandemic<i class="material-icons right">close</i></span>
@@ -201,11 +201,11 @@
                   <div class="col s12 m6 l3">
                       <div class="card">
                           <div class="card-image waves-effect waves-block waves-light">
-                          <img class="activator" src="mabini shrine.jpg">
+                          <img class="activator" src="events/3.jpg">
                           </div>
                           <div class="card-content">
                           <span class="card-title activator grey-text text-darken-4">Ginto: Student-athletes win big in 32nd SEA Games<i class="material-icons right">more_vert</i></span>
-                          <p><a href="#">Read!</a></p>
+                          <p><a href="news3.html">Read!</a></p>
                           </div>
                           <div class="card-reveal">
                           <span class="card-title grey-text text-darken-4">Ginto: Student-athletes win big in 32nd SEA Games<i class="material-icons right">close</i></span>
@@ -223,7 +223,7 @@
                               </div>
                               <div class="card-content">
                               <span class="card-title activator grey-text text-darken-4">Engineering grads dominate licensure examinations<i class="material-icons right">more_vert</i></span>
-                              <p><a href="#">Read!</a></p>
+                              <p><a href="news4.html">Read!</a></p>
                               </div>
                               <div class="card-reveal">
                               <span class="card-title grey-text text-darken-4">Engineering grads dominate licensure examinations<i class="material-icons right">close</i></span>
