--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <ul>
           <li><a href="index.html" class="btn-floating red"><i class="material-icons">home</i></a></li> <!-- Map -->
           <li><a href="kiosk.html" class="btn-floating yellow darken-1"><i class="material-icons">book</i></a></li> <!--Written History-->
-          <li><a class="btn-floating green"><i class="material-icons">restaurant</i></a></li> <!-- Food -->
+          <li><a href="food.html" class="btn-floating green"><i class="material-icons">restaurant</i></a></li> <!-- Food -->
           <li><a href="calendar.html" class="btn-floating blue"><i class="material-icons">insert_invitation</i></a></li> <!-- Events-->
           <li><a href="selector.html" class="btn-floating purple darken-4"><i class="material-icons">navigation</i></a></li> <!-- VR -->
         </ul>
@@ -153,13 +153,13 @@
     </div>
 
     <div class="twitter">
-      <h5 style="color: white;">News!</h5>
+      <h5 style="color: white;">Latest Updates!</h5>
       <blockquote class="twitter-tweet"><p lang="en" dir="ltr">CAEPUP RESULTS ARE HERE! <a href="https://twitter.com/hashtag/CAEPUP2023?src=hash&amp;ref_src=twsrc%5Etfw">#CAEPUP2023</a> <a href="https://twitter.com/hashtag/PUPCUTIE?src=hash&amp;ref_src=twsrc%5Etfw">#PUPCUTIE</a> <a href="https://t.co/Fr0lfGwuWF">pic.twitter.com/Fr0lfGwuWF</a></p>&mdash; PUP (Official) (@ThePUPOfficial) <a href="https://twitter.com/ThePUPOfficial/status/1662851231910600705?ref_src=twsrc%5Etfw">May 28, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     </div>
 
 
     <div class="events" style="margin-top: 10px;">
-      <h5>Events!</h5>          
+      <h5>News!</h5>          
 
       <div class="row">
           <div class="col s12 m6 l3">
