--- a/pano1.html
+++ b/pano1.html
@@ -39,7 +39,7 @@
         <ul>
           <li><a href="index.html" class="btn-floating red"><i class="material-icons">home</i></a></li> <!-- Map -->
           <li><a href="kiosk.html" class="btn-floating yellow darken-1"><i class="material-icons">book</i></a></li> <!--Written History-->
-          <li><a class="btn-floating green"><i class="material-icons">restaurant</i></a></li> <!-- Food -->
+          <li><a href="food.html" class="btn-floating green"><i class="material-icons">restaurant</i></a></li> <!-- Food -->
           <li><a href="calendar.html" class="btn-floating blue"><i class="material-icons">insert_invitation</i></a></li> <!-- Events-->
           <li><a href="selector.html" class="btn-floating purple darken-4"><i class="material-icons">navigation</i></a></li> <!-- VR -->
         </ul>
