--- a/food.html
+++ b/food.html
@@ -65,7 +65,7 @@
     <div class="explore" style="width: 100%;margin: 10px;">
         <h5>Foods of PUP</h5>
         <div class="row">
-          <div class="col s3">
+          <div class="col s12 m6 l3">
             <div class="card">
               <div class="card-image">
                 <img src="foodcropped/fewa.jpg">
@@ -82,7 +82,7 @@
             </div>
           </div>
 
-          <div class="col s3">
+          <div class="col s12 m6 l3">
             <div class="card">
               <div class="card-image">
                 <img src="foodcropped/clubhouse.jpg">
@@ -99,7 +99,7 @@
           </div>
         
 
-        <div class="col s3">
+        <div class="col s12 m6 l3">
           <div class="card">
             <div class="card-image">
               <img src="foodcropped/tusok.jpg">
@@ -117,7 +117,7 @@
         </div>
 
 
-        <div class="col s3">
+        <div class="col s12 m6 l3">
           <div class="card">
             <div class="card-image">
               <img src="foodcropped/palamig.jpg">
