--- a/food.html
+++ b/food.html
@@ -77,7 +77,7 @@
                   </p>
               </div>
               <div class="card-action">
-                <a href="#">Where to Buy</a>
+                <a href="fooddirection.html">Where to Buy</a>
               </div>
             </div>
           </div>
@@ -93,7 +93,7 @@
                   -	A hearty and filling sandwich made with bread, ham, lettuce, tomatoes, scrambled eggs, and mayonnaise.</p>
               </div>
               <div class="card-action">
-                <a href="#">Where to Buy</a>
+                <a href="fooddirection.html">Where to Buy</a>
               </div>
             </div>
           </div>
@@ -111,7 +111,7 @@
                 </p>
             </div>
             <div class="card-action">
-              <a href="#">Where to Buy</a>
+              <a href="fooddirection.html">Where to Buy</a>
             </div>
           </div>
         </div>
@@ -129,7 +129,7 @@
 </p>                
             </div>
             <div class="card-action">
-              <a href="#">Where to Buy</a>
+              <a href="fooddirection.html">Where to Buy</a>
             </div>
           </div>
         </div>
