--- a/food.html
+++ b/food.html
@@ -41,7 +41,7 @@
           <li><a class="btn-floating yellow darken-1"><i class="material-icons">book</i></a></li> <!--Written History-->
           <li><a class="btn-floating green"><i class="material-icons">restaurant</i></a></li> <!-- Food -->
           <li><a href="calendar.html" class="btn-floating blue"><i class="material-icons">insert_invitation</i></a></li> <!-- Events-->
-          <li><a href="map.html" class="btn-floating purple darken-4"><i class="material-icons">navigation</i></a></li> <!-- VR -->
+          <li><a href="selector.html" class="btn-floating purple darken-4"><i class="material-icons">navigation</i></a></li> <!-- VR -->
         </ul>
     </div>
 
